syntax = "proto3";
package user.conf;

option go_package = "./conf";

import "google/protobuf/duration.proto";

message ServiceConfig {
  Server server = 1;
}

message Bootstrap {
  Data data = 1;
  ServiceConfig article_service = 2;
  ServiceConfig user_service = 3;
}

message Server {
  message HTTP {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  message GRPC {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration timeout = 3;
  }
  HTTP http = 1;
  GRPC grpc = 2;
}

message Data {
  message Database {
    string driver = 1;
    string source = 2;
    int64 max_idle_connections = 3;
    int64 max_open_connections = 4;
    int64 max_connection_life_time = 5;
  }
  message Redis {
    string network = 1;
    string addr = 2;
    google.protobuf.Duration read_timeout = 3;
    google.protobuf.Duration write_timeout = 4;
  }
  message Etcd {
    repeated string addr = 1;
  }
  Database database = 1;
  Redis redis = 2;
  Etcd etcd = 3;
}
